package dias.heimy.domain.enums;

public enum TransactionType {
    INCOME,
    EXPENSE,
    TRANSFER
}
